# Baldr

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CookieOptions.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  HttpSession.hpp  IMiddleware.hpp  PathMatcher.cpp  PathMatcher.hpp  README.md  RateLimitMiddleware.h  StatusCode.hpp  Tuple.hpp  WebApplication.cpp  WebApplication.hpp  WebApplicationBuilder.cpp  WebApplicationBuilder.hpp  conan_provider.cmake  conandata.yml  main.cpp  zensical.toml
.github/workflows/: cmake-multi-platform.yml  docs.yml  fuzz.yml  sync-wiki.yml
.kilo/: gaps.md
.kilo/plans/: 1783003792736-webapp-gap-analysis.md  1783185399440-domain-restructure-and-build-speedup.md  1783192217849-docs-resync-v0.16.0.md  1783374163992-fuzz-testing-release-ci.md
benchmarks/wrk/: devices.lua  run-devices.sh
docs/: Home.md  fuzzing.md  get-started.md  index.md
docs/authoring/: examples.md
docs/authoring/examples/: devices.md  file-stream.md  hello-service.md  hello-world.md  open-api.md  static-files.md  todo.md  weather-forecast.md
docs/community/: contributing.md  license.md
docs/extensions/: index.md  logging.md  openapi-ui.md  openapi.md  overview.md  rate-limit.md
docs/middleware/: compression.md  cors.md  csrf.md  exception-handler.md  logging.md  overview.md  rate-limit.md  request-id.md  security-headers.md
docs/setup/: build.md  project-structure.md
docs/tutorial/: 01-hello-world.md  02-routing-and-results.md  03-dependency-injection.md  04-middleware.md  05-static-files.md  06-testing.md  index.md
docs/usage/: binding.md  dependency-injection.md  health-checks.md  middleware.md  overview.md  results.md  route-listing.md  route-options.md  routing.md  static-files.md  streaming-results.md  tracing.md
examples/Devices/: CMakeLists.txt
examples/Devices/src/: main.cpp
examples/FileStream/: CMakeLists.txt
examples/FileStream/src/: main.cpp
examples/HealthChecks/: CMakeLists.txt
examples/HealthChecks/src/: main.cpp
examples/HelloService/: CMakeLists.txt
examples/HelloService/src/: HelloService.cpp  HelloService.hpp  main.cpp
examples/HelloWorld/: CMakeLists.txt
examples/HelloWorld/src/: main.cpp
examples/OpenApiExample/: CMakeLists.txt
examples/OpenApiExample/src/: Device.hpp  User.hpp  main.cpp
examples/SqlgenIntegration/: CMakeLists.txt
examples/SqlgenIntegration/src/: UserService.cpp  UserService.hpp  main.cpp
examples/StaticFiles/: CMakeLists.txt
examples/StaticFiles/src/: main.cpp
examples/StaticFiles/wwwroot/: index.html
examples/Todo/: CMakeLists.txt
examples/Todo/src/: ITodoRepository.hpp  InMemoryTodoRepository.cpp  InMemoryTodoRepository.hpp  Todo.hpp  (+3 more)
examples/WeatherForecast/: CMakeLists.txt
include/: CookieOptions.hpp  HttpServer.hpp  HttpSession.hpp  Tuple.hpp  WebApplication.hpp  WebApplicationBuilder.hpp
include/Baldr/: Baldr.hpp  CookieOptions.hpp  HttpServer.hpp  HttpSession.hpp  IMiddleware.hpp  LoggingMiddleware.hpp  MiddlewareProvider.hpp  RateLimitMiddleware.hpp  WebApplication.hpp  WebApplicationBuilder.hpp
scripts/: install_afl.sh  run_one_fuzz.sh
src/: WebApplication.cpp  WebApplicationBuilder.cpp  main.cpp
src/Baldr/: AsioAdapter.hpp  AsioAwait.hpp  Baldr.hpp  BaldrExtension.cpp  BaldrExtension.hpp  BufferPool.hpp  CompressionInternal.cpp  CompressionInternal.hpp  CompressionMiddleware.cpp  CompressionMiddleware.hpp  CorsMiddleware.hpp  CsrfMiddleware.hpp  ExceptionHandlerMiddleware.hpp  FileStreamResult.hpp  HttpConnection.cpp  HttpConnection.hpp  HttpMethod.hpp  HttpRequest.hpp  HttpRequestParser.cpp  HttpRequestParser.hpp  HttpResponse.hpp  HttpResult.hpp  HttpServer.cpp  HttpServer.hpp  HttpServerOptions.hpp  HttpSession.hpp  IMiddleware.hpp  InFlightTracker.hpp  JsonBody.hpp  LoggingMiddleware.hpp  MetricsMiddleware.cpp  MetricsMiddleware.hpp  MetricsRegistry.cpp  MiddlewareProvider.hpp  MpMcPool.hpp  Net.hpp  PathMatcher.cpp  PathMatcher.hpp  RateLimitMiddleware.hpp  RateLimiter.hpp  (+14 more)
test/: CMakeLists.txt
test/fuzz/: CMakeLists.txt  CompressionFuzz.cpp  CookieFuzz.cpp  FuzzAssert.hpp  FuzzedDataProvider.hpp  HttpParserFuzz.cpp  MiddlewareFuzz.cpp  ResultsFuzz.cpp  RouterFuzz.cpp  SecurityFuzz.cpp  StaticFilesFuzz.cpp  afl_driver.cpp
test/src/: AsioAdapterSpec.cpp  CompressionSpec.cpp  CsrfMiddlewareSpec.cpp  FileStreamResultSpec.cpp  HttpConnectionMiddlewareChainSpec.cpp  HttpRequestParserSpec.cpp  HttpRequestResponseSpec.cpp  HttpServerOptionsSpec.cpp  InFlightTrackerSpec.cpp  JsonBodySpec.cpp  JsonSchemaEmitterSpec.cpp  MapStaticFilesSpec.cpp  MetricsRegistrySpec.cpp  MiddlewareSpec.cpp  OpenApiSpec.cpp  PathMatcherSpec.cpp  RateLimiterSpec.cpp  ResultSpec.cpp  RouteOptionsSpec.cpp  RouterMethodFallbackSpec.cpp  RouterSpec.cpp  SecurityHeadersMiddlewareSpec.cpp  StreamingResultSpec.cpp  StringHelpersSpec.cpp
test/src/Application/: ConnectionMiddlewareChainSpec.cpp  FromBodyBindingSpec.cpp  FromParamsBindingSpec.cpp  FromQueryBindingSpec.cpp  HealthChecksSpec.cpp  InFlightTrackerSpec.cpp  RouteListingSpec.cpp
test/src/Hosting/: StringHelpersSpec.cpp
test/src/Http/: FileStreamResultSpec.cpp  FromBodySpec.cpp  FromParamsSpec.cpp  FromQuerySpec.cpp  JsonBodySpec.cpp  JsonTypedResultSpec.cpp  ParserSpec.cpp  RequestResponseSpec.cpp  ResultSpec.cpp  RouteGuardSpec.cpp  RouteOptionsSpec.cpp  RouterMethodFallbackSpec.cpp  RouterSpec.cpp  SecurityRegressionsSpec.cpp  ServerOptionsSpec.cpp  StreamingResultSpec.cpp  TraceContextSpec.cpp  TypedResultsSpec.cpp  UserDto.hpp  VariantResultSpec.cpp
test/src/Metrics/: RegistrySpec.cpp
test/src/Middleware/: CompressionSpec.cpp  CsrfSpec.cpp  IMiddlewareSpec.cpp  RequestIdTraceSpec.cpp  SecurityHeadersSpec.cpp
test/src/Middleware/RateLimit/: LimiterSpec.cpp
test/src/OpenApi/: ContentTypeHonestySpec.cpp  FromBodyAutoSchemaSpec.cpp  FromParamsAutoSchemaSpec.cpp  FromQueryAutoSchemaSpec.cpp  JsonSchemaEmitterSpec.cpp  MapScalarUiSpec.cpp  MapStaticFilesSpec.cpp  OpenApiSpec.cpp  RequestBodySpec.cpp  ScalarUiSpec.cpp  TypedResultsSpec.cpp  VariantOpenApiSpec.cpp
wiki/: getting_started.md
(+97 files in other folders)
